# aoc23

./: CMakeLists.txt  build.sh  run.sh  utils.cpp  utils.hpp
day01/: CMakeLists.txt  day01.cpp
day02/: CMakeLists.txt  day02.cpp
day03/: CMakeLists.txt  day03.cpp
